--- a/src/styles/utils/_colors.scss
+++ b/src/styles/utils/_colors.scss
@@ -1,4 +1,5 @@
 $primary_color: #f4e041;
+$hover_color_btn: #ffe302;
 $secondary_color: #00bdd3;
 $background_color: #f8f8f8;
 $border_color: #d0cfcf;
