--- a/src/styles/blocks/cards.scss
+++ b/src/styles/blocks/cards.scss
@@ -1,64 +1,77 @@
 @import '../utils/mixins.scss';
 
-.card {
+.card-profile {
   text-align: center;
 
   margin-bottom: 140px;
 
   &__title {
-    font-size: 40px;
     align-items: center;
+
     margin-bottom: 50px;
+
+    font-size: 40px;
     line-height: 40px;
+
+    color: rgba(0, 0, 0, 0.87);
   }
 
   &__container {
     display: flex;
-    align-items: center;
     flex-direction: column;
     gap: 20px;
-    margin: 0 auto 54px;
 
+    margin: 0 auto 54px;
     padding: 0 16px;
 
     @include onTablet {
       flex-direction: row;
-      padding: 0 32px;
       flex-wrap: wrap;
+
+      padding: 0 32px;
     }
 
     @include onDesktop {
-      width: 1170px;
+      max-width: 1170px;
+
+      padding: 0;
     }
   }
+}
 
-  &__box {
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    width: 328px;
+.card-box {
+  max-width: 328px;
+  padding: 20px;
 
-    overflow: hidden;
+  gap: 29px;
 
-    @include onTablet {
-      width: 48%;
-    }
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
 
-    @include onDesktop {
-      width: 31%;
-    }
+  color: rgba(0, 0, 0, 0.87);
+
+  @include onTablet {
+    width: 344px;
+  }
+
+  @include onDesktop {
+    width: 370px;
   }
 
   &__image {
     margin-bottom: 20px;
-  }
 
-  &__description {
-    &_name {
-      margin-bottom: 20px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+    border-radius: 50%;
+  }
+}
+
+.description {
+  &__name {
+    margin-bottom: 20px;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
