--- a/src/styles/blocks/login-form.scss
+++ b/src/styles/blocks/login-form.scss
@@ -73,3 +73,19 @@
     }
   }
 }
+
+//To add styles for bulma library
+.file-label {
+  width: 100%;
+}
+
+.file-name {
+  width: 100%;
+  height: 54px;
+
+  line-height: 40px;
+}
+
+.file-cta {
+  height: 54px;
+}
